# quodeq

./: .coverage  .gitignore  .mailmap  .quodeqignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  quodeq.env  readme_bak
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  build-dmg.yml  codeql.yml  enforce-main-source.yml  evaluate.yml  integration.yml  linux-desktop-smoke.yml  linux-distro-smoke.yml  publish.yml  quodeq-nightly.yml  quodeq-review.yml  snyk.yml  test.yml  update-homebrew.yml  wheel-smoke.yml  windows-integration.yml  workflow-lint.yml
.plans/: 2026-04-28-side-pane-multi-window.md
.quodeq/: workflow.env
.superpowers/sdd/: final-review-fix-report.md
Formula/: quodeq.rb
benchmarks/: README.md  precedent_golden.py
benchmarks/.corpus/: README.md
benchmarks/baselines/: gate.json
benchmarks/quodeq_bench/: __init__.py  __main__.py  cli.py  compare.py  evidence.py  matcher.py  metrics.py  models.py  report.py  runner.py
benchmarks/results/: .gitignore
config/: disciplines.conf
docs/: DECISIONS.md  PLAN-analysis-enhanced-v4.md  RELEASE.md  linux-manual-smoke-checklist.md  ui-map.md  windows-manual-smoke-checklist.md
docs/adr/: 0001-dimension-level-weighting-not-yet-applied.md
docs/plans/: 2026-03-02-projects-tab-design.md  2026-03-02-projects-tab.md  2026-03-03-standards-compiler-design.md  2026-03-03-standards-compiler.md  clean-architecture-dto-migration.md
evaluators/_cross_cutting/: clean_architecture.md  solid.md
evaluators/bash/: scan_rules.ini
evaluators/java/: plugin.json  scan_rules.ini
evaluators/kotlin/: scan_rules.ini
evaluators/mobile_ios/: plugin.json  scan_rules.ini
evaluators/python/: plugin.json  scan_rules.ini
evaluators/typescript/: detectors.json  dimensions.json  plugin.json  scan_rules.ini
packaging/macos/: _dashboard.py  _helpers.py  build-dashboard-dmg.sh  build-dmg.sh  dashboard_entry.py  entry.py  icon.icns  launcher.sh  menubar.py  quodeq.spec  quodeq_dashboard.spec  requirements.txt  volicon.icns
packaging/windows/: build-exe.ps1  quodeq_dashboard.spec
prompts/: compass.md  subagent.md
reports/repo/: repository_info.json
scripts/: build-dist.sh  build.sh  check_imports.py  fetch-asvs.py
specs/: 2026-04-20-live-terminal-stream-design.md  2026-04-20-live-terminal-stream-plan.md  2026-04-20-run-lifecycle-status-design.md  2026-04-20-run-lifecycle-status-plan-a.md  2026-04-21-run-lifecycle-dashboard-design.md  2026-04-21-run-lifecycle-dashboard-plan.md  2026-04-21-run-lifecycle-dashboard-ui-b2-design.md  2026-04-21-run-lifecycle-dashboard-ui-b2-plan.md
src/codecompass/: __init__.py  _fs_evaluation_mixin.py  _fs_tooling_mixin.py  _fs_violations.py  action_api.py  action_provider.py  action_provider_fs.py  action_provider_jobs.py  ai_cli.py  bootstrap.py  cli.py  logging.py  logging.py.orig  paths.py
src/quodeq/: __init__.py  _cli_evaluation.py  _cli_resolution.py  _fs_evaluation_mixin.py  _fs_tooling_mixin.py  _fs_violations.py  action_api.py  action_api_helpers.py  action_api_routes.py  action_api_zip.py  action_provider.py  action_provider_fs.py  action_provider_fs_accumulated.py  action_provider_fs_dashboard.py  action_provider_jobs.py  ai_cli.py  bootstrap.py  cli.py  cli_parser.py  logging.py  paths.py  utils.py
standards/: cwe_audit.json
standards/asvs/: level1.json
standards/cisq/: maintainability.json  performance.json  reliability.json  security.json
standards/compiled/: flexibility.json  security.json  usability.json
standards/cwe/: audit.json
standards/iso25010/: flexibility.json  maintainability.json  performance.json  reliability.json  security.json  usability.json
tests/: conftest.py  test_action_api.py  test_action_api_health.py  test_action_provider_contract.py  test_action_provider_fs_dashboard.py  test_action_provider_fs_evaluations.py  test_action_provider_jobs.py  test_ai_cli.py  test_analysis_files_read.py  test_cli_branch_scope.py  test_cli_commands.py  test_cli_coverage.py  test_cli_diff_from.py  test_cli_diff_from_wiring.py  test_cli_evaluate_flags.py  test_cli_help.py  test_cli_integration.py  test_cli_update_notice.py  test_cli_worktree_cleanup.py  test_compatibility.py  test_config_actions_generate_practices.py  test_config_actions_parallel.py  test_config_ai_provider.py  test_config_cli_help.py  test_config_coverage.py  test_config_coverage_gaps.py  test_config_dimensions.py  test_config_disciplines.py  test_config_evaluators.py  test_config_knowledge_refresh.py  test_config_practice_conversion.py  test_config_practices_manager.py  test_config_prompt_templates.py  test_config_sources.py  test_config_standards_fetcher.py  test_config_validation.py  test_dashboard_action_api.py  test_dashboard_build.py  test_dashboard_runner.py  test_data_provider.py  (+54 more)
tests/analysis/: _provenance_gate_support.py  test_analysis_context_coverage.py  test_api_integration.py  test_api_prompt.py  test_api_runner.py  test_api_runner_coverage.py  test_api_size_cap_dispatch.py  test_command.py  test_command_builder.py  test_command_coverage.py  test_config.py  test_consolidated_coverage.py  test_consolidated_prompt_marker_step.py  test_custom_dimension_id_guard.py  test_diff_mode_pipeline.py  test_diff_resolver.py  test_dim_estimates.py  test_dim_state_transitions.py  test_dimension_aliases.py  test_dimension_ops_broken_pipe.py  test_dimension_runner.py  test_drop_stats.py  test_dry_run.py  test_evidence_collector_exit_reason.py  test_finding_classifier.py  test_fingerprint_memo.py  (+47 more)
tools/: _standards_refs.py  audit_cwe_abstraction.py  build-dist.sh  build.sh  check_imports.py  compile_standards.py  enrich_standards.py  enrich_standards_mapping.json  enrich_standards_prefix_map.json  import_baseline.txt  migrate_cwe.py  migrate_cwe_title.py  migrate_reason_title.py  rescore.py  resolve_practices.py
ui/: README.md
(+2325 files in other folders)
