[project]
name = "quodeq"
version = "1.0.3"
description = "Source code quality evaluation platform powered by AI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Victor Purcallas Marchesi", email = "vpurcallas@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["code-quality", "ai", "evaluation", "iso-25010", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "jsonschema==4.26.0",
    "flask==3.1.3",
    "pywebview>=5.0",
]

[project.optional-dependencies]
api = [
    "instructor>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/quodeq/quodeq"
Repository = "https://github.com/quodeq/quodeq"
Issues = "https://github.com/quodeq/quodeq/issues"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "openai>=1.0.0",
]

[project.scripts]
quodeq = "quodeq:main"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["quodeq"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["uv_build>=0.10.6,<0.12.0"]
build-backend = "uv_build"
