[project]
name = "quodeq"
version = "1.7.1"
description = "Source code quality evaluation platform powered by AI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Victor Purcallas Marchesi", email = "vpurcallas@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["code-quality", "ai", "evaluation", "iso-25010", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "jsonschema==4.26.0",
    "flask==3.1.3",
    "flask-sock>=0.7",
    "pywebview>=6.2",
    "openai>=1.0",
    "httpx>=0.27",
    "packaging>=23",
    'pywinpty>=3.0.5 ; sys_platform == "win32"',
]

[project.urls]
Homepage = "https://github.com/quodeq/quodeq"
Repository = "https://github.com/quodeq/quodeq"
Issues = "https://github.com/quodeq/quodeq/issues"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
]

[project.scripts]
quodeq = "quodeq:main"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "benchmarks"]
markers = [
    "integration: end-to-end tests that spawn real subprocesses or require external resources",
]
# Hard per-test cap so a deadlocked socket/subprocess/signal test fails
# fast with a traceback at the stuck line instead of hanging the suite.
# Use thread method (not signal) so it works on Windows. Override per
# test with @pytest.mark.timeout(N) when a slow integration test
# legitimately needs more time.
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["quodeq"]
branch = true
omit = ["*/terminal/_pty_windows.py"]

[tool.coverage.report]
# Enforced gate (activated by --cov in CI). Ratchet this up as coverage
# improves; never lower it without justification.
fail_under = 80

[build-system]
requires = ["uv_build>=0.10.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Note: src/quodeq/static is intentionally INCLUDED so the wheel ships a
# pre-built UI. End users no longer need Node/npm at runtime. Build it
# with `tools/build-dist.sh` (runs npm ci + vite build before uv build).
# Help screenshots ship via static/ (Vite copies them there); excluding the
# source copies keeps the wheel from carrying each image twice. They stay in
# the source tarball because rebuilding the UI needs them.
wheel-exclude = [
    "src/quodeq/ui/node_modules",
    "src/quodeq/ui/src/assets/help",
]
# Keep the installed JS dependency tree (~28MB / 11k files, reproducible from
# package-lock.json) and local build cruft out of the published source tarball.
source-exclude = [
    "src/quodeq/ui/node_modules",
    "src/quodeq/ui/.mypy_cache",
    "**/.DS_Store",
]

[[tool.mypy.overrides]]
module = "winpty.*"
ignore_missing_imports = true
